--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,12 @@
-
-<h1>Sample App</h1>
-<p>
+<div class="center hero-unit">
+<h1>Welcome to the Sample App</h1>
+<h2>
 This is the home page for the
-<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-sample application.
-</p>
+	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+	sample application.
+</h2>
+<a href="#" class="btn btn-large btn-primary"> Sign up now! </a>
+
+</div>
+
+<img alt="Rails" src="/assets/rails.png">
