--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact'</h1>
 <p>
-This is the contact page for the
+Contact Ruby on Rails Tutorial about the sample app at the
 <a href="http://railstutorial.org/">contact page</a>
 sample application.
 </p>
