--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,8 +6,8 @@
 
 	<nav>
 		<ul>
-			<li><%= link_to "About", '#' %></li>
-			<li><%= link_to "Contac", '#' %></li>
+			<li><%= link_to "About", about_path %></li>
+			<li><%= link_to "Contac", contact_path %></li>
 			<li><a href="http://railstutorial.org/">News</a></li>
 		</ul>
 	</nav>	
