--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap";
 /* mixins, variables, etc. */
+
 $grayMediumLight: #eaeaea;
+
 /* universal */
 html {
 overflow-y: scroll;
@@ -30,7 +32,7 @@ letter-spacing: -2px;
 margin-bottom: 30px;
 text-align: center;
 }
- 
+
 h2 {
 font-size: 1.7em;
 letter-spacing: -1px;
@@ -74,7 +76,7 @@ color: $grayDarker;
 small {
 float: left;
 }
- 
+
 ul {
 float: right;
 list-style: none;
@@ -83,4 +85,49 @@ float: left;
 margin-left: 10px;
 }
 }
+}
+
+@mixin box_sizing{
+-moz-box-sizing: border-box;
+-weight-box-sizing: border-box;
+box-sizing: border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump{
+clear: both;
+float: left;
+width: 100%;
+margin-top: 45px;
+@include box_sizing;
+}
+
+
+/* Sidebar */
+
+aside{
+section{
+padding: 10px 0;
+border-top: 1px solid $grayLighter;
+&:first_child{
+border:0;
+padding-top:0;
+}
+span{
+display: block;
+margin-bottom: 3px;
+line-height: 1;
+}
+h1{
+font-size: 1.6em;
+text-align: left;
+letter-spacing: -1px;
+margin-bottom: 3px
+}
+}
+}
+.gravatar{
+	float: left;
+	margin-right: 10px;
 }
