--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,23 @@
-<% provide(:title,'Foo') %>
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= full_title(yield(:title))%></title>
-	<%= stylesheet_link_tag    "application", :media => "all" %>
+	<title>
+		<%= full_title(yield(:title)) %>
+	</title>
+	<%= stylesheet_link_tag "application", media: "all" %>
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
 	<%= render 'layouts/shim' %>
 </head>
-<body>	
-	<%= render 'layouts/header'%>
+
+<body>
+	<%= render 'layouts/header' %>
 	<div class="container">
-		<% flash.each do |key, value| %>
-		<%= content_tag(:div, value, class: "alert alert-#{key}") %>
-		<%end %>
-		<%=yield%>
+		<% flash.each do |key,value|%>
+		<%= content_tag(:div,value,class:"alert alert-#{key}") %>
+		<div class="alert alert-<%= key %>"><%= value %></div>
+		<% end %>
+		<%= yield %>
 		<%= render 'layouts/footer' %>
 		<%= debug(params) if Rails.env.development? %>
 	</div>
