--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,6 @@
-<% provide(:title, 'Contact') %>
-<h1>Contact'</h1>
+<h1>Contact</h1>
 <p>
-Contact Ruby on Rails Tutorial about the sample app at the
-<a href="http://railstutorial.org/">contact page</a>
-sample application.
+	Contact Ruby on Rails Tutorial about the sample app at the
+	<a href="http://railstutorial.org/">Contact page</a>
+	sample application
 </p>
