--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,12 @@
 <div class="center hero-unit">
-<h1>Welcome to the Sample App</h1>
-<h2>
-This is the home page for the
-	<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-	sample application.
-</h2>
-<a href="#" class="btn btn-large btn-primary"> Sign up now! </a>
+	<!--<h1>Welcome to the Sample App</h1> -->
 
+	<h1> Welcome to the Sample App </h1>
+	<h2>
+		This is the home page for the
+		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+		sample application Home.
+	</h2>
+	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-
-<img alt="Rails" src="/assets/rails.png">
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
